#1290 Consolidate the CLI and infrastructure design docs
The dive TUI, the CLI's value rendering, the documentation site and the
build tooling were described by seventeen documents written as plans for
the change that introduced each piece. Several had gone stale against the
code: a forward-only preview cursor since replaced by a row window, four
Theme methods where there are five, a RowWindow method that does not
exist, a docs publish trigger and scripts that were reworked, and a
differential-testing design still marked as proposed. CLAUDE.md's dive
and Diataxis rules linked three of them as normative.

Five design documents now describe these subsystems as they are:
DIVE_ARCHITECTURE (screen stack, state/handler/render split, ParquetModel,
preview window, read-failure guard), DIVE_UI_RULES (visual tiers,
navigation rules, viewport virtualization; the target of CLAUDE.md's dive
rules), CLI_VALUE_RENDERING (one spelling per value and figure, size
statistics), DOCUMENTATION (Diataxis structure, prose check, site stack,
publish topology, API change reports) and BUILD_INFRASTRUCTURE (qa
profile, Error Prone checks, CI dependency closure, manifest metadata,
plugin management). Integration and differential testing move into
TESTING.md, and the micro-benchmark conventions into PERFORMANCE.md.

User docs, README, CONTRIBUTING, NATIVE_BUILD, ROADMAP, two workflows and
a few code comments that contradicted the code are corrected alongside.